After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 614344 - cairo: return value is used uninitialized in inStroke and inFill
cairo: return value is used uninitialized in inStroke and inFill
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-03-30 10:27 UTC by Tommi Komulainen
Modified: 2010-03-30 17:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cairo: fix _GJS_CAIRO_CONTEXT_DEFINE_FUNC2B return value handling (1.57 KB, patch)
2010-03-30 10:27 UTC, Tommi Komulainen
committed Details | Review

Description Tommi Komulainen 2010-03-30 10:27:50 UTC
Initialize and return the return value from the called function. Fixes
compiler warnings.

modules/cairo-context.c: In function ‘inStroke_func’:
modules/cairo-context.c:332: warning: ‘ret’ is used uninitialized in this function
modules/cairo-context.c: In function ‘inFill_func’:
modules/cairo-context.c:331: warning: ‘ret’ is used uninitialized in this function
Comment 1 Tommi Komulainen 2010-03-30 10:27:52 UTC
Created attachment 157463 [details] [review]
cairo: fix _GJS_CAIRO_CONTEXT_DEFINE_FUNC2B return value handling
Comment 2 Johan (not receiving bugmail) Dahlin 2010-03-30 13:46:27 UTC
Review of attachment 157463 [details] [review]:

Looks good
Comment 3 Tommi Komulainen 2010-03-30 17:10:18 UTC
Attachment 157463 [details] pushed as 133dd0a - cairo: fix _GJS_CAIRO_CONTEXT_DEFINE_FUNC2B return value handling