cairo: fix _GJS_CAIRO_CONTEXT_DEFINE_FUNC2B return value handling

Initialize and return the return value from the called function. Fixes
compiler warnings.

modules/cairo-context.c: In function ‘inStroke_func’:
modules/cairo-context.c:332: warning: ‘ret’ is used uninitialized in this function
modules/cairo-context.c: In function ‘inFill_func’:
modules/cairo-context.c:331: warning: ‘ret’ is used uninitialized in this function

https://bugzilla.gnome.org/show_bug.cgi?id=614344